<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/app_basic_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_start_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_start_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/start_url"
            android:inputType="text"
            android:textColor="@android:color/black"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_scan_thread_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_basic_margin"
        app:layout_constraintTop_toBottomOf="@+id/til_start_url">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_scan_thread_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/scan_thread_count"
            android:inputType="number"
            android:textColor="@android:color/black"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_searched_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_basic_margin"
        app:layout_constraintTop_toBottomOf="@+id/til_scan_thread_count">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_searched_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/searched_text"
            android:inputType="text"
            android:textColor="@android:color/black"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_count_of_scanned_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_basic_margin"
        app:layout_constraintTop_toBottomOf="@+id/til_searched_text">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_count_of_scanned_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/max_count_of_scanned_url"
            android:inputType="number"
            android:textColor="@android:color/black"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_small_margin"
        android:enabled="false"
        android:text="@string/pause_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_count_of_scanned_url"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/app_small_margin"
        android:layout_marginLeft="@dimen/app_small_margin"
        android:layout_marginRight="@dimen/app_small_margin"
        android:layout_marginStart="@dimen/app_small_margin"
        android:layout_marginTop="@dimen/app_small_margin"
        android:text="@string/start"
        app:layout_constraintEnd_toStartOf="@+id/btn_pause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_count_of_scanned_url"/>

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/app_small_margin"
        android:layout_marginLeft="@dimen/app_small_margin"
        android:layout_marginRight="@dimen/app_small_margin"
        android:layout_marginStart="@dimen/app_small_margin"
        android:layout_marginTop="@dimen/app_small_margin"
        android:enabled="false"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_pause"
        app:layout_constraintTop_toBottomOf="@+id/til_count_of_scanned_url"/>

    <TextView
        android:id="@+id/txt_result_dummy_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_basic_margin"
        android:text="@string/list_of_scanned_scanning_url"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/btn_pause"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view_of_scanned_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_small_margin"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/txt_result_dummy_title"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>